# marinero_pointclouds

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
marinero_pointclouds/: 01_client_remapped_segmented_pcd_publisher.py  01_server_remapped_segmented_pcd_publisher.py  count_until_client.py  count_until_server.py  ply_pcd_remapper.py  ply_publisher.py  remapped_marina_pcd_publisher.py  remapped_marina_ply_publisher.py  remapped_pcd_publisher.py  remapped_ply_publisher.py  remapped_segmented_pcd_publisher.py  remapped_segmented_pcd_publisher_thread.py  remapped_segmented_ply_publisher.py
